--- a/index.html
+++ b/index.html
@@ -137,6 +137,25 @@
     </div>
   </section>
 
+  <section>
+    <div class="container-fluid vaccine-types-container">
+      <div class="row text-center vaccine-types-text">
+        <div class="col">
+          AstraZeneca
+        </div>
+        <div class="col fw-bolder">
+          SINOVAC
+        </div>
+        <div class="col">
+          Pfizer
+        </div>
+        <div class="col">
+          moderna
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="container">
     <footer class="row row-cols-5 py-5 my-5">
       <div class="col">
