--- a/index.html
+++ b/index.html
@@ -156,6 +156,25 @@
     </div>
   </section>
 
+  <section>
+    <div class="container-fluid question-container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="question-title">
+            Why should I vaccine?
+          </div>
+          <p class="question-paragraph text-muted">In order to avoid any doubts about getting the COVID-19 vaccine,
+            identify the
+            following 4 benefits of
+            COVID-19 vaccination:</p>
+        </div>
+        <div class="col-md-6">
+
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="container">
     <footer class="row row-cols-5 py-5 my-5">
       <div class="col">
