--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
           </div>
           <!-- Dropwdown -->
           <div class="btn-group dropdown-btn-container">
-            <button type="button" class="btn btn-primary dropdown-btn" data-bs-toggle="dropdown" aria-expanded="false">
+            <button type="button" class="btn btn-primary dropdown-btn btn-icon-text" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="fa fa-clock-o dropdown-icon"></i>
             </button>
+            <h4 class="fw-bolder" style="color: #224174;">Schedule your vaccinations</h4>
             <ul class="dropdown-menu dropdown-menu-start dropdown-menu-lg-start">
               <div class="dropdown-form">
                 <form>
@@ -170,6 +171,75 @@
         </div>
         <div class="col-md-6">
 
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container-fluid">
+      <div class="row row-benefits">
+        <div class="col col-benefits">
+          <div class="card card-benefits">
+            <div>
+              <button type="button" class="btn btn-primary card-btn-big">
+                <i class="fa fa-list-ul card-icon-big"></i>
+              </button>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title benefits-title">Minimize the spread of viruses</h5>
+              <p class="card-text text-muted benefits-text">Vaccine has been proven effective to prevent someone from getting infected with
+                Coranavirus</p>
+            </div>
+          </div>
+        </div>
+        <div class="col col-benefits">
+          <div class="col col-benefits">
+            <div class="card card-benefits">
+              <div>
+                <button type="button" class="btn btn-primary card-btn-big">
+                  <i class="fa fa-shield card-icon-big"></i>
+                </button>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title benefits-title">Forming antibodies</h5>
+                <p class="card-text text-muted benefits-text">Vaccine has been proven effective to prevent someone from getting infected with
+                  Coranavirus</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-benefits">
+          <div class="col col-benefits">
+            <div class="card card-benefits">
+              <div>
+                <button type="button" class="btn btn-primary card-btn-big">
+                  <i class="fa fa-users card-icon-big"></i>
+                </button>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title benefits-title">Protecting people nearby</h5>
+                <p class="card-text text-muted benefits-text">Vaccine has been proven effective to prevent someone from getting infected with
+                  Coranavirus</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-benefits">
+          <div class="col col-benefits">
+            <div class="card card-benefits">
+              <div>
+                <button type="button" class="btn btn-primary card-btn-big">
+                  <i class="fa fa-arrow-up card-icon-big"></i>
+                </button>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title benefits-title">Creating group immunity</h5>
+                <p class="card-text text-muted benefits-text">Vaccine has been proven effective to prevent someone from getting infected with
+                  Coranavirus</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
