--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           </div>
           <!-- Dropwdown -->
           <div class="btn-group dropdown-btn-container">
-            <button type="button" class="btn btn-primary dropdown-btn btn-icon-text" data-bs-toggle="dropdown" aria-expanded="false">
+            <button type="button" class="btn btn-primary dropdown-btn btn-icon-text" data-bs-toggle="dropdown"
+              aria-expanded="false">
               <i class="fa fa-clock-o dropdown-icon"></i>
             </button>
             <h4 class="fw-bolder" style="color: #224174;">Schedule your vaccinations</h4>
@@ -188,7 +189,8 @@
             </div>
             <div class="card-body">
               <h5 class="card-title benefits-title">Minimize the spread of viruses</h5>
-              <p class="card-text text-muted benefits-text">Vaccine has been proven effective to prevent someone from getting infected with
+              <p class="card-text text-muted benefits-text">Vaccine has been proven effective to prevent someone from
+                getting infected with
                 Coranavirus</p>
             </div>
           </div>
@@ -203,8 +205,8 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title benefits-title">Forming antibodies</h5>
-                <p class="card-text text-muted benefits-text">Vaccine has been proven effective to prevent someone from getting infected with
-                  Coranavirus</p>
+                <p class="card-text text-muted benefits-text">COVID-19 vaccine proven to help shape antibody response
+                  for immune system</p>
               </div>
             </div>
           </div>
@@ -219,8 +221,8 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title benefits-title">Protecting people nearby</h5>
-                <p class="card-text text-muted benefits-text">Vaccine has been proven effective to prevent someone from getting infected with
-                  Coranavirus</p>
+                <p class="card-text text-muted benefits-text">The benefits of COVID-19 vaccination are the vaccine that
+                  we get can also help protect people around us</p>
               </div>
             </div>
           </div>
@@ -235,8 +237,145 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title benefits-title">Creating group immunity</h5>
-                <p class="card-text text-muted benefits-text">Vaccine has been proven effective to prevent someone from getting infected with
-                  Coranavirus</p>
+                <p class="card-text text-muted benefits-text">COVID-19 vaccination is also beneficial for creating gruop
+                  immunity or herd immunity</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="row">
+      <div class="col-md-6">
+        <img src="./assets/img/she.jpg" class="img-fluid" alt="she">
+      </div>
+      <div class="col-md-6 preparations-body">
+        <div class="preparations-title">
+          Preparations Before Vaccine
+        </div>
+        <p class="preparations-paragraph text-muted">the success of vaccines is strongly influenced by the strength of
+          the body's
+          immune system. therefore, there are several things that can be tried to make the COVID-19 vaccine work:</p>
+
+        <div class="card preparations-card">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-11">
+                <div class=" btn-icon-text ">
+                  <button type="button" class="btn btn-primary preparations-icon-btn ">
+                    <i class="fa fa-beer preparations-icon"></i>
+                  </button>
+                  <h4 class="text-muted">Avoid alcoholic beverages</h4>
+                </div>
+
+              </div>
+              <div class="col-md-1">
+                <div class="preparations-btn">
+                  <button type="button" class="btn btn-primary preparations-icon-btn">
+                    <i class="fa fa-chevron-circle-down preparations-icon"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card preparations-card">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-11">
+                <div class=" btn-icon-text ">
+                  <button type="button" class="btn btn-primary preparations-icon-btn ">
+                    <i class="fa fa-close preparations-icon"></i>
+                  </button>
+                  <h4 class="text-muted">Avoid stress</h4>
+                </div>
+
+              </div>
+              <div class="col-md-1">
+                <div class="preparations-btn">
+                  <button type="button" class="btn btn-primary preparations-icon-btn" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <i class="fa fa-chevron-circle-up text-muted preparations-icon"></i>
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start preparations-d-down">
+                    <p class="preparations-d-down-p text-muted">Stress has a profund effect on immune work.
+                      Moreover, prolonged stress can increase cortisol production and oxidative stress in the body
+                    </p>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card preparations-card">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-11">
+                <div class=" btn-icon-text ">
+                  <button type="button" class="btn btn-primary preparations-icon-btn ">
+                    <i class="fa fa-spoon preparations-icon"></i>
+                  </button>
+                  <h4 class="text-muted">Eat healthy food</h4>
+                </div>
+
+              </div>
+              <div class="col-md-1">
+                <div class="preparations-btn">
+                  <button type="button" class="btn btn-primary preparations-icon-btn">
+                    <i class="fa fa-chevron-circle-down preparations-icon"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card preparations-card">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-11">
+                <div class=" btn-icon-text ">
+                  <button type="button" class="btn btn-primary preparations-icon-btn ">
+                    <i class="fa fa-bed preparations-icon"></i>
+                  </button>
+                  <h4 class="text-muted">Get enough sleep</h4>
+                </div>
+
+              </div>
+              <div class="col-md-1">
+                <div class="preparations-btn">
+                  <button type="button" class="btn btn-primary preparations-icon-btn">
+                    <i class="fa fa-chevron-circle-down preparations-icon"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card preparations-card">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-11">
+                <div class=" btn-icon-text ">
+                  <button type="button" class="btn btn-primary preparations-icon-btn ">
+                    <i class="fa fa-heart preparations-icon"></i>
+                  </button>
+                  <h4 class="text-muted">Exercise or physical activity</h4>
+                </div>
+
+              </div>
+              <div class="col-md-1">
+                <div class="preparations-btn">
+                  <button type="button" class="btn btn-primary preparations-icon-btn">
+                    <i class="fa fa-chevron-circle-down preparations-icon"></i>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
