--- a/index.html
+++ b/index.html
@@ -384,6 +384,129 @@
     </div>
   </section>
 
+  <section>
+    <div class="container-fluid">
+      <div class="row row-contact">
+        <div class="col-md-6">
+          <div class="contact-title">
+            Emergency Contact
+          </div>
+          <p class="contact-paragraph text-muted">
+            Conctact one of the contacts below if you or your family feel unwell and have similar symptoms such as
+            Covid-19, make sure you also take care of yourself before reporting to us:
+          </p>
+          <div class="row">
+            <div class="col-md-5">
+              <div class="card contact-card">
+                <div class="card-body card-body-contact">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <button type="button" class="btn btn-primary card-btn-big">
+                        <i class="fa fa-phone card-icon-big"></i>
+                      </button>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="row card-title-contact">
+                        Call
+                      </div>
+                      <div class="row card-subtitle-contact text-muted">
+                        021.123.145.14
+                      </div>
+                    </div>
+                  </div>
+                  <div class="container-btn-contact">
+                    <button type="button" class="btn btn-primary-light btn-contact">Call Now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="card contact-card">
+                <div class="card-body card-body-contact">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <button type="button" class="btn btn-primary card-btn-big">
+                        <i class="fa fa-comment card-icon-big"></i>
+                      </button>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="row card-title-contact">
+                        Chat
+                      </div>
+                      <div class="row card-subtitle-contact text-muted">
+                        021.123.145.14
+                      </div>
+                    </div>
+                  </div>
+                  <div class="container-btn-contact">
+                    <button type="button" class="btn btn-primary btn-contact">Chat Now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <br>
+
+          <div class="row">
+            <div class="col-md-5">
+              <div class="card contact-card">
+                <div class="card-body card-body-contact">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <button type="button" class="btn btn-primary card-btn-big">
+                        <i class="fa fa-phone card-icon-big"></i>
+                      </button>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="row card-title-contact">
+                        Video Call
+                      </div>
+                      <div class="row card-subtitle-contact text-muted">
+                        021.123.145.14
+                      </div>
+                    </div>
+                  </div>
+                  <div class="container-btn-contact">
+                    <button type="button" class="btn btn-primary-light btn-contact-big">Video Call Now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="card contact-card">
+                <div class="card-body card-body-contact">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <button type="button" class="btn btn-primary card-btn-big">
+                        <i class="fa fa-comment card-icon-big"></i>
+                      </button>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="row card-title-contact">
+                        Message
+                      </div>
+                      <div class="row card-subtitle-contact text-muted">
+                        021.123.145.14
+                      </div>
+                    </div>
+                  </div>
+                  <div class="container-btn-contact">
+                    <button type="button" class="btn btn-primary-light btn-contact-big">Message Now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-md-6 col-contact">
+          <img src="./assets/img/he.jpg" class="img-fluid" alt="he">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="container">
     <footer class="row row-cols-5 py-5 my-5">
       <div class="col">
