--- a/index.html
+++ b/index.html
@@ -507,11 +507,12 @@
     </div>
   </section>
 
-  <div class="container">
+  <div class="container-fluid footer-container">
     <footer class="row row-cols-5 py-5 my-5">
       <div class="col">
         <a class="navbar-brand footer-title fw-bold" href="#">Vaccination</a>
-        <p class="m-4">Our goal is to help the world free from the ongoing pandemic</p>
+        <p align="left" class="col-footer-text text-muted">Our goal is to help the world free from the ongoing pandemic
+        </p>
 
       </div>
 
@@ -520,39 +521,45 @@
 
       </div>
 
-      <div class="col">
-        <h5>About</h5>
+      <div class="col ">
+        <div class="col-footer-subtitle">
+          About
+        </div>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About Us</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">News & Blog</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link col-footer-text text-muted">About Us</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link col-footer-text text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link col-footer-text text-muted">News & Blog</a></li>
         </ul>
       </div>
 
-      <div class="col">
-        <h5>Company</h5>
+      <div class="col ">
+        <div class="col-footer-subtitle">
+          Company
+        </div>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">How We Work?</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Capital</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Security</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link col-footer-text text-muted">How We Work?</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link col-footer-text text-muted">Capital</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link col-footer-text text-muted">Security</a></li>
         </ul>
       </div>
 
-      <div class="col">
-        <h5>Support</h5>
+      <div class="col ">
+        <div class="col-footer-subtitle">
+          Support
+        </div>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Support Center</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contact Us</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link col-footer-text text-muted">FAQs</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link col-footer-text text-muted">Support Center</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link col-footer-text text-muted">Contact Us</a></li>
         </ul>
       </div>
     </footer>
     <div class="row">
-      <div class="col-md-8 text-muted">
-        <h5>@2021 Vaccination. All rights reserved</h5>
+      <div class="col-md-8 col-footer-text text-muted">
+        @2021 Vaccination. All rights reserved
       </div>
-      <div class="col text-muted">
-        <h5>Terms & Agreements Privacy Policy</h5>
+      <div class="col col-footer-text text-muted">
+        Terms & Agreements Privacy Policy
       </div>
     </div>
     <br>
