fix: sixth part icons

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                   <div class="row">
                     <div class="col-md-4">
                       <button type="button" class="btn btn-primary card-btn-big">
-                        <i class="fa fa-phone card-icon-big"></i>
+                        <i class="fa fa-video-camera card-icon-big"></i>
                       </button>
                     </div>
                     <div class="col-md-6">
@@ -479,7 +479,7 @@
                   <div class="row">
                     <div class="col-md-4">
                       <button type="button" class="btn btn-primary card-btn-big">
-                        <i class="fa fa-comment card-icon-big"></i>
+                        <i class="fa fa-envelope card-icon-big"></i>
                       </button>
                     </div>
                     <div class="col-md-4">
