--- a/index.html
+++ b/index.html
@@ -509,19 +509,15 @@
 
   <div class="container-fluid footer-container">
     <footer class="row row-cols-5 py-5 my-5">
-      <div class="col">
+      <div class="col-md-6">
         <a class="navbar-brand footer-title fw-bold" href="#">Vaccination</a>
-        <p align="left" class="col-footer-text text-muted">Our goal is to help the world free from the ongoing pandemic
+        <p align="left" class="col-footer-paragraph text-muted">Our goal is to help the world free from the ongoing
+          pandemic
         </p>
 
       </div>
 
-
-      <div class="col">
-
-      </div>
-
-      <div class="col ">
+      <div class="col-md-2">
         <div class="col-footer-subtitle">
           About
         </div>
@@ -532,7 +528,7 @@
         </ul>
       </div>
 
-      <div class="col ">
+      <div class="col-md-2">
         <div class="col-footer-subtitle">
           Company
         </div>
@@ -543,7 +539,7 @@
         </ul>
       </div>
 
-      <div class="col ">
+      <div class="col-md-2">
         <div class="col-footer-subtitle">
           Support
         </div>
